<resources>
    <string name="app_name">ProjetoCorona</string>
    <string name="hello_blank_fragment" translatable="false">Frederico Cabral nº 1701841</string>
    <string name="TextoBperfis">Perfis</string>
    <string name="TextoBestatisticas">Estatisticas</string>
    <string name="TextoBsair">Sair</string>
    <string name="TextoTituloestatisticas">Estatisticas</string>
    <string name="TextoTVinformacao">Informacao</string>
    <string name="TextoTituloperfis">Perfis</string>
    <string name="TextoTitulonovo_perfil">Novo Perfil</string>
    <string name="Textonome">Nome</string>
    <string name="Textodata_nascimento">Data de Nascimento (dd/mm/yyyy)</string>
    <string name="Textodiabetes">Diabetes</string>
    <string name="Textoproblemas_saude">Problemas Saúde</string>
    <string name="Textohipertencao">Hipertenção</string>
    <string name="Textooncologicos">Oncologicos</string>
    <string name="Textosis_imunitario">Sis. Imunitário</string>
    <string name="Textocardiovascular">Cardiovascular</string>
    <string name="Textorespiratorios">Respiratórios</string>
    <string name="TextoTituloinformaces">Informações</string>
    <string name="TextoBregisto_diario">Registo Diário</string>
    <string name="TextoBhistorico">Histórico</string>
    <string name="TextoBtestes">Testes</string>
    <string name="TextoTituloaltera_perfil">Altera Perfil</string>
    <string name="TextoTituloregisto_diario">Registo Diário</string>
    <string name="Textotemperatura">Temperatura</string>
    <string name="Textodificuldade_em_respirar">Fadiga</string>
    <string name="Textotosse">Tosse</string>
    <string name="TextoTitulohistorico_de_registos">Histórico de Registos</string>
    <string name="TextoTitulotestes">Testes</string>
    <string name="TextoBhistorico_testes">Histórico</string>
    <string name="TextoTitulonovo_teste">Novo Teste</string>
    <string name="Textodata_do_teste">Data do Teste (dd/mm/yyyy)</string>
    <string name="Textodata_do_resultado">Data do Resultado (dd/mm/yyyy)</string>
    <string name="TextoTitulohistorico_testes">Histórico Testes</string>
    <string name="TextoMenuadicionar">Adicionar</string>
    <string name="TextoMenueditar">Editar</string>
    <string name="TextoMenueliminar">Eliminar</string>
    <string name="TextoMenuvoltar">Voltar</string>
    <string name="TextoMenusobre">Sobre</string>
    <string name="TextoMenucancelar">Cancelar</string>
    <string name="TextoMenuguardar">Guardar</string>
    <string name="TextoMenuhome">Home</string>
    <string name="Textoinserirnome">Insira um nome</string>
    <string name="Textodataerrada">Introduza uma data valida</string>
    <string name="Textoadicionadosucesso">adicionado com sucesso</string>
    <string name="Textofalhaadicao">Falha na adicao</string>
    <string name="Textoeliminarperfildialog">Eliminar Perfil</string>
    <string name="Textoeliminadosucesso">Eliminnado Com sucesso</string>
    <string name="Textoerroeliminar">ERRO a eliminar</string>
    <string name="Textonome_a_alterar">Nome a alterar</string>
    <string name="Textodata_a_alterar">Data a alterar</string>
    <string name="Textoalterarsucesso">Alterado Com sucesso</string>
    <string name="Textoerroalterar">Erro a alterar</string>
    <string name="Textoselecioneperfil">selecione um perfil</string>
    <string name="TextoInsereSucesso">Inseriu com Sucesso</string>
    <string name="TextoErroInserir">Erro a Inserir</string>
    <string name="TemperaturaInvalida">Temperatura Invalida</string>
    <string name="TextoInsiraData">Insira uma data</string>
    <string name="TextoSelecionresultado">Selecione um resultado</string>
    <string name="TextoInsiradatavalida">Insira uma data válida</string>
    <string name="TextoPessoasRegistadas">Pessoas Registadas</string>
    <string name="Textodoentescronicos">Doentes Cronicos</string>
    <string name="TextoNtestesRealizados">Nº de Testes Realizados</string>
    <string name="Textotestespositivos">Testes Positivos</string>
</resources>