<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_Perfil_to_Novo_perfil"
        android:icon="@drawable/ic_baseline_add_24"
        android:title="@string/TextoMenuadicionar"
        android:visible="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_Perfil_to_Altera_Perfil"
        android:icon="@drawable/ic_baseline_edit_24"
        android:title="@string/TextoMenueditar"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_eliminar"
        android:icon="@drawable/ic_baseline_delete_24"
        android:title="@string/TextoMenueliminar"
        android:visible="false"
        app:showAsAction="ifRoom" />
</menu>