<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment_Altera_Perfil" >

    <TextView
        android:id="@+id/Titulo_Altera_Perfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/TextoTituloaltera_perfil"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/TV_Nome_antigo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TV_Nome_antigo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="Nome a alterar"
        app:layout_constraintBottom_toTopOf="@+id/TV_data_antiga"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Titulo_Altera_Perfil" />

    <TextView
        android:id="@+id/TV_data_antiga"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="Data a alterar"
        app:layout_constraintBottom_toTopOf="@+id/TIL_altera_nome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TV_Nome_antigo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TIL_altera_nome"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintBottom_toTopOf="@+id/TIL_altera_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TV_data_antiga">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/TIET_altera_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Textonome" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TIL_altera_data"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TIL_altera_nome">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/TIET_altera_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Textodata_nascimento" />
    </com.google.android.material.textfield.TextInputLayout>

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TIL_altera_data">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/Text_A_Problemas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Textoproblemas_saude" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <CheckBox
                android:id="@+id/CB_altera_diabetes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Textodiabetes" />

            <CheckBox
                android:id="@+id/CB_altera_respiratorio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Textorespiratorios" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <CheckBox
                android:id="@+id/CB_altera_hipertensao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Textohipertencao" />

            <CheckBox
                android:id="@+id/checkBox5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Textooncologicos" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Textocardiovascular" />

            <CheckBox
                android:id="@+id/checkBox6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Textosis_imunitario" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>