<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment_Informacoes" >

    <TextView
        android:id="@+id/Titulo_Informacoes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/TextoTituloinformaces"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/B_Registo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/B_Registo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TextBregisto_diario"
        app:layout_constraintBottom_toTopOf="@+id/B_estorico_registo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Titulo_Informacoes" />

    <Button
        android:id="@+id/B_estorico_registo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TextoBhistorico"
        app:layout_constraintBottom_toTopOf="@+id/B_testes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/B_Registo" />

    <Button
        android:id="@+id/B_testes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/TextoBtestes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/B_estorico_registo" />
</androidx.constraintlayout.widget.ConstraintLayout>